Changelogs: - Referral button on mobile fixed. - Working graphs for user AnonymousGCA.
TODO:
- Fix footer on mobile.
- Fix discord logo on mobile of page contacts.

--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,12 @@ p {
 }
 
 .earnapp-referral {
-    width: 10%;
-    margin-top: 15px;
-    margin-left: 89%;
-    background: linear-gradient(-45deg, #ff0000, #003cff, #ff0000, #003cff);
+    width: fit-content;
+    position: fixed;
+    padding: 10pt;
+    top: 10px;
+    right: 10px;
+    background: linear-gradient(-45deg, #003cff, #ff0000, #003cff, #ff0000);
     background-size: 400% 400%;
     animation: gradient 10s ease infinite;
 }
